--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+.container {
+  /*display: flex;
+  flex-direction: column;
+  justify-content: space-between;*/
+  height: 100vh;
+  width: 100%;
+}
+
 .App {
   text-align: center;
 }
