--- a/src/componentes/ListaDeSignos/estilo.css
+++ b/src/componentes/ListaDeSignos/estilo.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 1024px;
+  width: 100%;
+  max-width: 1024px;
   margin: 0 auto;
   box-sizing: border-box;
 }
